# n-plus-k-queens

./: CMakeLists.txt
NPlusKQueenProblem/: CMakeLists.txt  NPlusKQueen.cpp  NPlusKQueen.h  NPlusKQueenProblem.cpp  NPlusKQueenProblem.h
