# CMakeList.txt : CMake project for NPlusKQueenProblem, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (NPlusKQueenProblem "NPlusKQueenProblem.cpp" "NPlusKQueenProblem.h" "NPlusKQueen.h" "NPlusKQueen.cpp")

# TODO: Add tests and install targets if needed.
